# autonomous_platform

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  Checklist_gokartCentralen.md  DONKEY_CAR_SETUP.md  Dockerfile  HARDWARE_DESIGN.md  HOW_TO_EXTEND.md  ISSUES_AND_FUTURE_WORK.md  Jenkinsfile  LICENSE.txt  README.md  README_CAMERA_DOCKER.MD  REQ_SPEC_BOOM.xlsx  SOFTWARE_DESIGN.md  TEST_DEBUGGING.md  build_docs.sh  codespell.ignore  index.html  pandoc-log.txt  pre-commit-config.yaml  search.html  sitemap.xml
.trunk/: trunk.yaml
CAD/: Fusion 360.md  Improve Node box.md  README.md  index.html  thumbnail.sh
CAN_Nodes_Microcontroller_Code/: HOW_TO_EXTEND.md  Propulsion_Steering.md  README.md  Speed_Sensor.md  index.html
CHANGELOG/: index.html
HARDWARE_DESIGN/: index.html
HOW_TO_EXTEND/: index.html
Hardware_Interface_Low_Level_Computer/: Dockerfile  HOW_TO_EXTEND.md  README.md  SETUP_OF_RASPBERRY_PI.md  TEST_DEBUGGING.md  docker-compose.yaml  index.html  setup_hardware_interface_environment_once.sh  testing.bash
Hardware_Interface_Low_Level_Computer/ap4_hwi_code/ap4hwi_ws/src/can_msgs_to_ros2_topic_pkg/: CMakeLists.txt  package.xml
Hardware_Interface_Low_Level_Computer/ap4_hwi_code/ap4hwi_ws/src/can_msgs_to_ros2_topic_pkg/src/: can_msgs_translator_interface.cpp
High_Level_Control_Computer/: DIGITAL_TWIN_ROS.md  DONKEY_CAR_SETUP.md  Dockerfile  HOW_TO_EXTEND.md  IMITATION_LEARNING.md  README.md  TEST_DEBUGGING.md  docker-compose.yaml  index.html  launch_depthai_ros.sh  start_data_collection.sh  start_training.sh  test.ipynb
(+393 files in other folders)
